@@ -15,6 +15,7 @@ offers extended widgets based upon the original PyGTK widgets.
 
     - gazpacho > 0.6.5   http://ftp.gnome.org/pub/GNOME/sources/gazpacho/
     - zope.interfaces    http://www.zope.org/Products/ZopeInterface
+    - ctypes             http://starship.python.net/crew/theller/ctypes/
 
 * Installation
 
